# PegSolitaire

./: .gitignore  CMakeLists.txt  PegSolitaire.cpp  PegSolitaire.h  main.cpp  tdd.cxx
